// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailEntry rendering renders expected elements 1`] = `
<div
  aria-labelledby="random-id-label"
  className="DetailEntry TestClass"
  role="region"
>
  <div
    className="DetailEntry__label"
  >
    <Label
      htmlFor="random-id"
      id="random-id-label"
      text="Test Label"
    />
  </div>
  <div
    className="DetailEntry__value DetailEntry--column TestValueClass"
    id="random-id"
    title="TestValueTitle"
  >
    test value
  </div>
</div>
`;

exports[`DetailEntry rendering renders expected elements when children are specified 1`] = `
<div
  aria-labelledby="random-id-label"
  className="DetailEntry TestClass"
  role="region"
>
  <div
    className="DetailEntry__label"
  >
    <Label
      htmlFor="random-id"
      id="random-id-label"
      text="Test Label"
    />
  </div>
  <div
    className="DetailEntry__value DetailEntry--column TestValueClass"
    id="random-id"
  >
    Test Children
  </div>
</div>
`;

exports[`DetailEntry rendering renders expected elements when className and valueClass are not set 1`] = `
<div
  aria-labelledby="random-id-label"
  className="DetailEntry"
  role="region"
>
  <div
    className="DetailEntry__label"
  >
    <Label
      htmlFor="random-id"
      id="random-id-label"
      text="Test Label"
    />
  </div>
  <div
    className="DetailEntry__value DetailEntry--column"
    id="random-id"
  >
    test value
  </div>
</div>
`;

exports[`DetailEntry rendering renders expected elements when direction is row 1`] = `
<div
  aria-labelledby="random-id-label"
  className="DetailEntry TestClass"
  role="region"
>
  <div
    className="DetailEntry__label"
  >
    <Label
      htmlFor="random-id"
      id="random-id-label"
      text="Test Label"
    />
  </div>
  <div
    className="DetailEntry__value DetailEntry--row TestValueClass"
    id="random-id"
  >
    test value
  </div>
</div>
`;

exports[`DetailEntry rendering renders expected elements when infoText is set 1`] = `
<div
  aria-labelledby="random-id-label"
  className="DetailEntry"
  role="region"
>
  <div
    className="DetailEntry__label"
  >
    <Label
      htmlFor="random-id"
      id="random-id-label"
      text="Test Label"
    />
    <InfoTooltip
      placement="bottom"
      text="Test info"
    />
  </div>
  <div
    className="DetailEntry__value DetailEntry--column"
    id="random-id"
  >
    test value
  </div>
</div>
`;
